// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should not render if not open 1`] = `<DocumentFragment />`;

exports[`Modal should render a 3x large one 1`] = `
<div>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jRkhhQ absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a 4x large one 1`] = `
<div>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jCpCzv absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a 5x large one 1`] = `
<div>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw bHERBC absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a large one 1`] = `
<div>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jnoDfx absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a medium one 1`] = `
<div>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw fWjEmW absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a modal with content 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with description 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="mt-1 text-theme-neutral-dark"
            >
              This is the Modal description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with overlay 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a small one 1`] = `
<div>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw wLhVq absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a xlarge one 1`] = `
<div>
  <div
    class="w-full h-full z-50 fixed inset-0 overflow-y-scroll"
  >
    <div
      class="w-full h-full fixed z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw Zauxd absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mt-24 mb-24 mx-auto rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxjAm bThAoP"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            ark
          </h2>
          <div
            class="flex-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
